# cdp

./: README.md  cite.bib
src/: CMakeLists.txt  cdp.cpp  cdp.hpp  cdp_main.cpp  contour.cpp  contour.hpp  rect.cpp  rect.hpp  tools.cpp  tools.hpp
